--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,14 @@
 body {
     background-color: rgb(38, 88, 44);
 }
+
+#endTurnButton {
+    position: absolute;
+    top: 10px;
+    left: 350px; /* Adjust this value based on your game window size */
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #0f0;
+    border: none;
+    cursor: pointer;
+}
