--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,12 @@ body {
     padding: 10px 20px;
     font-size: 16px;
     background-color: #0f0;
+    border-radius: 10px;
     border: none;
     cursor: pointer;
+}
+
+#endTurnButton:hover {
+    background-color: #68e1ff;
+    transform: scale(1.05);
 }
