--- a/src/style.css
+++ b/src/style.css
@@ -1,20 +1,52 @@
+:root {
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
+
+    background-color: rgb(166, 159, 173);
+}
+
 body {
-    background-color: rgb(38, 88, 44);
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    font-size: 2.4em;
+}
+
+#game-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(125, 126, 131);
+    width: 700px;
+    height: 500px;
+    border: 6px solid #000000;
+    border-radius: 10px;
+}
+
+#button-container {
+    position: relative;
+    margin-top: 20px;
+    text-align: center;
 }
 
 #endTurnButton {
-    position: absolute;
     top: 10px;
-    left: 350px; /* Adjust this value based on your game window size */
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #0f0;
+    background-color: rgb(156, 167, 206);
     border-radius: 10px;
-    border: none;
+    border: 3px solid black;
     cursor: pointer;
 }
 
 #endTurnButton:hover {
-    background-color: #68e1ff;
+    background-color: #c383ff;
     transform: scale(1.05);
 }
