--- a/src/style.css
+++ b/src/style.css
@@ -23,11 +23,11 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(125, 126, 131);
-    width: 700px;
-    height: 500px;
-    border: 6px solid #000000;
-    border-radius: 10px;
+    width: 564px;
+    height: 324px;
+    border: 6px solid black;
+    border-radius: 8px;
+    background-color: rgb(130, 138, 255);
 }
 
 #button-container {
