--- a/src/style.css
+++ b/src/style.css
@@ -38,10 +38,11 @@ h1 {
 button {
     position: absolute;
     left: 10px;
-    padding: 10px 20px;
+    padding: 8px 12px;
     font-size: 16px;
     background-color: rgb(156, 167, 206);
-    border-radius: 10px;
+    box-shadow: 0px 4px 0 0 rgb(0, 0, 0);
+    border-radius: 4px;
     border: 3px solid black;
     cursor: pointer;
 }
