--- a/src/style.css
+++ b/src/style.css
@@ -72,6 +72,6 @@ button:hover {
     position: absolute;
     top: 210px;
     left: 10px;
-    font-size: 16px;
+    font-size: 1.5em;
     color: #fff;
 }
