--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,13 @@ h1 {
     font-size: 2.4em;
 }
 
+h2 {
+    margin-bottom: 20px;
+    font-size: 1.8em;
+    color: #102c42;
+    text-align: center;
+}
+
 #game-container {
     position: relative;
     display: flex;
@@ -30,48 +37,43 @@ h1 {
     background-color: rgb(130, 138, 255);
 }
 
-#button-container {
+#info-panel {
+    display: flex;
+    width: 80%;
     margin-top: 20px;
-    text-align: center;
+    background-color: rgb(114, 117, 168);
+    border: 6px solid black;
+    border-radius: 12px;
+}
+
+#info-panel-left,
+#info-panel-middle,
+#info-panel-right {
+    display: flex;
+    flex-direction: column;
+    width: 33.33%;
+    padding: 10px;
+    justify-content: center;
 }
 
 button {
-    position: absolute;
-    left: 10px;
-    padding: 8px 12px;
+    padding: 10px 15px;
     font-size: 16px;
     background-color: rgb(156, 167, 206);
     box-shadow: 0px 4px 0 0 rgb(0, 0, 0);
     border-radius: 4px;
     border: 3px solid black;
     cursor: pointer;
+    margin-bottom: 10px;
 }
 
 button:hover {
-    background-color: #68e1ff;
+    background-color: #74adf7;
     transform: scale(1.05);
 }
 
-#endTurnButton {
-    top: 10px;
-}
-
-#buyDrillButton {
-    top: 60px;
-}
-
-#buyExcavatorButton {
-    top: 110px;
-}
-
-#buyDemolitionPlantButton {
-    top: 160px;
-}
-
 #resourceDisplay {
-    position: absolute;
-    top: 210px;
-    left: 10px;
+    text-align: center;
     font-size: 1.5em;
     color: #fff;
 }
