--- a/src/style.css
+++ b/src/style.css
@@ -79,7 +79,7 @@ button:hover {
   transform: scale(1.05);
 }
 
-#resourceDisplay {
+#playerDisplay {
   text-align: center;
   font-size: 1.5em;
   color: #fff;
